Added finalised write-ups and a footer.

--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -20,6 +20,13 @@ html {
 body {
   margin: 0;
 }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
 article,
 aside,
 details,
