--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -20,12 +20,21 @@ html {
 body {
   margin: 0;
 }
-.footer {
-  position: fixed;
-  left: 0;
+page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+content-wrap {
+  padding-bottom: 5rem;    /* Footer height */
+}
+footer {
+  position: absolute;
   bottom: 0;
   width: 100%;
+  height: 5rem;
   text-align: center;
+  background-color: #dddddd;
 }
 article,
 aside,
